# TimeIndex

./: .env  .gitignore  README.md  README_zh.md  REPO_SCHEMA.md  SKILL.md  config.yaml  daemon_howtodev.md  entry.py  ldb-test.py  pyproject.toml  test_daemon.py
cli/: __init__.py  entry.py
daemon/: daemon.py  llm_processor.py  wmi_monitor.py
db/: __init__.py  vector_store.py
src/: install.ps1  uninstall.ps1
src/TimeIndex/: config.yaml  entry.py  install.ps1  uninstall.ps1
src/TimeIndex/daemon/: __init__.py  daemon.py  llm_processor.py  wmi_monitor.py
src/TimeIndex/db/: embedding_provider.py  vector_store.py
src/TimeIndex/utils/: config.py  doctor.py
timeindex/: SKILL.md
utils/: __init__.py  config.py  doctor.py
