[project]
name = "timeindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.30.2",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "pywin32>=311",
    "wmi>=1.5.1",
]
