[project]
name = "timeindex"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.30.2",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "psutil>=7.2.2",
    "pywin32>=311",
    "typer>=0.24.2",
    "wmi>=1.5.1",
    "pyyaml>=6.0.1",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
ti = "TimeIndex.entry:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/TimeIndex", "config.yaml"]
